# WindBug

./: README.md  SampleOutput.txt  pyproject.toml
WindBug/: Mailer.py  WindBug.py  WindScrapper.py  __init__.py  __main__.py
src/: ConfigIni.py  WindBug.py  WindScrapper.py
