[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WindBug"
version = "1.0.2"
dependencies = [
   "requests",
   "beautifulsoup4",
]
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  { name="MisterMartin", email="mistermartin@users.noreply.github.com" },
]
description = "McMurdo JSOC winds web page scraper and email alerter"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MisterMartin/WindBug"
"Bug Tracker" = "https://github.com/MisterMartin/WindBug"
